compiler/testData/diagnostics/tests/exceptions/incorrectCallOnILT.kt
// RUN_PIPELINE_TILL: FRONTEND
// ISSUE: KT-62306

fun main() {
    1.<!NONE_APPLICABLE!>plus<!>()
}

/* GENERATED_FIR_TAGS: functionDeclaration */
